@@ -2,7 +2,7 @@
 #                                             Characters 253-257:
         let args = List.map (fun ty -> new argument(self, ty)) args_ty in
                                                     ^^^^
-Error: This expression has type < arguments : 'b; .. > as 'a
-       but an expression was expected of type 'a
+Error: This expression has type < arguments : 'a; .. >
+       but an expression was expected of type 'b
        Self type cannot escape its class
 # 
