@@ -63,6 +63,7 @@ Bug fixes:
   (Jérôme Vouillon and Adrien Nader and Peter Zotov)
 * PR#6081: ocaml should add script's directory to search path, not current directory
   (Thomas Leonard and Damien Doligez)
+- PR#6171: Error message confusing when a type escapes its scope.
 - PR#6526: ocamllex warning: unescaped newline in comment string
   (Damien Doligez, report by user 'dhekir')
 - PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
